--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "d3": "^3.5.6",
     "react": "^0.13.3",
     "tape": "^4.2.0",
-    "watchify": "^3.3.1"
+    "watchify": "^3.3.1",
+    "whatwg-fetch": "^0.9.0"
   },
   "browserify": {
     "transform": "babelify"
