--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browserify": "^11.0.1",
     "cssnext": "^1.8.3",
     "d3": "^3.5.6",
+    "json-stable-stringify": "^1.0.0",
     "lodash.sortby": "^3.1.5",
     "react": "^0.13.3",
     "tape": "^4.2.0",
