--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "immutable": "^3.7.5",
     "json-stable-stringify": "^1.0.0",
     "lodash.sortby": "^3.1.5",
-    "react": "^0.13.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.2",
     "tape": "^4.2.0",
     "watchify": "^3.3.1",
     "whatwg-fetch": "^0.9.0"
