--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browserify": "^11.0.1",
     "cssnext": "^1.8.3",
     "d3": "^3.5.6",
+    "dexie": "^1.2.0",
     "immutable": "^3.7.5",
     "json-stable-stringify": "^1.0.0",
     "lodash.sortby": "^3.1.5",
@@ -23,6 +24,6 @@
     "bundle": "npm run bundle-js && npm run bundle-css",
     "bundle-js": "mkdir -p dist && browserify -o dist/bundle.js src/index.js",
     "bundle-css": "mkdir -p dist && cssnext style.css > dist/style.css",
-    "watch": "mkdir -p dist && watchify --poll -v -d -o dist/bundle.js src/index.js"
+    "watch": "mkdir -p dist && watchify -v -d -o dist/bundle.js src/index.js"
   }
 }
