--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "babelify": "^6.1.3",
+    "basscss-btn-sizes": "^1.1.0",
     "browserify": "^11.0.1",
     "cssnext": "^1.8.3",
     "d3": "^3.5.6",
