--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sophie-genes",
   "author": "Patrick Golden",
+  "license": "GPL-3.0",
   "version": "1.1.0",
   "private": true,
   "dependencies": {
