--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cssnext": "^1.8.3",
     "d3": "^3.5.6",
     "dexie": "^1.2.0",
+    "filesaver.js": "^0.2.0",
     "immutable": "^3.7.5",
     "json-stable-stringify": "^1.0.0",
     "lodash.sortby": "^3.1.5",
