--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sophie-genes",
   "author": "Patrick Golden",
   "license": "GPL-3.0",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "private": true,
   "dependencies": {
     "babelify": "^6.1.3",
@@ -24,7 +24,10 @@
     "whatwg-fetch": "^0.9.0"
   },
   "browserify": {
-    "transform": ["babelify", "envify"]
+    "transform": [
+      "babelify",
+      "envify"
+    ]
   },
   "scripts": {
     "bundle": "npm run bundle-js && npm run bundle-css",
