--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "babelify": "^6.1.3",
+    "basscss": "^7.1.0",
     "basscss-btn-sizes": "^1.1.0",
     "browserify": "^11.0.1",
     "cssnext": "^1.8.3",
