--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "2.3.0",
   "private": true,
   "dependencies": {
-    "babelify": "^6.1.3",
     "basscss": "^7.1.0",
     "basscss-btn-sizes": "^1.1.0",
     "browserify": "^11.0.1",
@@ -19,16 +18,11 @@
     "lodash.sortby": "^3.1.5",
     "react": "^0.14.0",
     "react-dom": "^0.14.2",
+    "react-hyperscript": "^3.2.0",
     "tape": "^4.2.0",
     "uglifyjs": "^2.4.10",
     "watchify": "^3.3.1",
     "whatwg-fetch": "^0.9.0"
-  },
-  "browserify": {
-    "transform": [
-      "babelify",
-      "envify"
-    ]
   },
   "scripts": {
     "bundle": "npm run bundle-js && npm run bundle-css",
