Add missing dependencies

--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "immutable": "^3.7.5",
     "json-stable-stringify": "^1.0.0",
     "lodash.sortby": "^3.1.5",
+    "org-async-actions": "^1.0.0",
+    "ramda": "^0.25.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.2",
     "react-hyperscript": "^3.2.0",
     "tape": "^4.2.0",
     "uglifyjs": "^2.4.10",
+    "union-type": "^0.4.1",
     "watchify": "^3.3.1",
     "whatwg-fetch": "^0.9.0"
   },
