--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "d3": "^5.5.0",
     "dexie": "^1.2.0",
+    "file-saver": "^2.0.0-rc.3",
     "org-async-actions": "^1.0.0",
     "ramda": "^0.25.0",
     "react": "^16.4.2",
