--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "browserify": "^16.2.2",
     "envify": "^3.4.0",
+    "terser": "^3.11.0",
     "watchify": "^3.11.0"
   },
   "scripts": {
