Use org-shell to manage resources and state

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "file-saver": "^2.0.0-rc.3",
     "is-url": "^1.2.4",
     "org-async-actions": "^1.0.0",
+    "org-shell": "^3.0.4",
     "ramda": "^0.25.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
