--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "file-saver": "^2.0.0-rc.3",
     "is-url": "^1.2.4",
     "org-async-actions": "^1.0.0",
-    "org-shell": "^3.0.4",
-    "ramda": "^0.25.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "org-shell": "^4.0.0",
+    "ramda": "^0.26.1",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "react-hyperscript": "^3.2.0",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "styled-components": "^3.4.2",
+    "react-redux": "^6.0.0",
+    "rebass": "^3.0.1",
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.3",
     "tape": "^4.2.0",
     "trie-search": "^1.2.8",
     "union-type": "github:ptgolden/union-type"
