--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "org-shell": "^4.0.0",
     "ramda": "^0.26.1",
     "react": "^16.8.2",
+    "react-aria-menubutton": "^6.1.0",
     "react-dom": "^16.8.2",
     "react-hyperscript": "^3.2.0",
     "react-redux": "^6.0.0",
