--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "d3": "^5.5.0",
+    "debounce": "^1.2.0",
     "dexie": "^1.2.0",
     "file-saver": "^2.0.0-rc.3",
     "is-url": "^1.2.4",
