--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debounce": "^1.2.0",
     "file-saver": "^2.0.1",
     "is-url": "^1.2.4",
+    "markdown-it": "^8.4.2",
     "org-async-actions": "^1.0.0",
     "org-shell": "^5.1.0",
     "ramda": "^0.26.1",
