--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "browserify": {
     "transform": [
-      "envify"
+      "envify",
+      "./dredgedocify.js"
     ]
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "redux": "^4.0.1",
     "styled-components": "^4.1.3",
     "tape": "^4.2.0",
+    "through2": "^3.0.1",
     "union-type": "github:ptgolden/union-type"
   },
   "devDependencies": {
