--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^6.0.0",
     "rebass": "^3.0.1",
     "redux": "^4.0.1",
+    "stringify-tree": "^1.0.2",
     "styled-components": "^4.1.3",
     "tape": "^4.2.0",
     "throttleit": "^1.0.0",
