--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sophie-genes",
   "author": "Patrick Golden",
   "license": "AGPL-3.0-or-later",
-  "version": "7.0.0-4",
+  "version": "7.0.0",
   "private": true,
   "browserify": {
     "transform": [
