Add typescript/tsify deps

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "browserify": "^16.2.3",
     "envify": "^3.4.1",
     "terser": "^3.11.0",
+    "tsify": "^5.0.2",
+    "typescript": "^4.1.5",
     "watchify": "^3.11.0"
   },
   "scripts": {
