--- a/package.json
+++ b/package.json
@@ -4,12 +4,6 @@
   "license": "AGPL-3.0-or-later",
   "version": "7.4.1",
   "private": true,
-  "browserify": {
-    "transform": [
-      "envify",
-      "./dredgedocify.js"
-    ]
-  },
   "dependencies": {
     "blue-tape": "^1.0.0",
     "d3": "^5.5.0",
@@ -38,16 +32,7 @@
   },
   "devDependencies": {
     "argparse": "^2.0.1",
-    "browserify": "^16.2.3",
-    "envify": "^3.4.1",
     "esbuild": "^0.8.46",
-    "terser": "^3.11.0",
-    "tsify": "^5.0.2",
-    "typescript": "^4.1.5",
-    "watchify": "^3.11.0"
-  },
-  "scripts": {
-    "watch": "mkdir -p dist && watchify -v -d -o dist/dredge.js src/index.js",
-    "serve": "python3 -m http.server 9999"
+    "typescript": "^4.1.5"
   }
 }
