--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
+  "root": true,
   "extends": "eslint:recommended",
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 2017,
+    "sourceType": "module"
   },
   "env": {
     "node": true,
@@ -24,5 +26,16 @@
     "prefer-const": 2,
     "prefer-spread": 2,
     "quotes": 0
-  }
+  },
+  "overrides": [{
+    "files": ["*.ts"],
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "rules": {
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": "error"
+    }
+  }]
 }
