--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "7.4.1",
   "private": true,
   "dependencies": {
+    "@types/file-saver": "^2.0.1",
+    "@types/is-url": "^1.2.28",
+    "@types/markdown-it": "^12.0.1",
     "blue-tape": "^1.0.0",
     "buffer": "^6.0.3",
     "d3": "^5.5.0",
@@ -26,6 +29,7 @@
     "react-window": "^1.8.2",
     "rebass": "^3.0.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "stringify-tree": "^1.0.2",
     "styled-components": "^4.1.3",
     "tape": "^4.2.0",
@@ -37,6 +41,11 @@
     "@types/d3": "^6.3.0",
     "@types/node": "^14.14.28",
     "@types/ramda": "^0.27.38",
+    "@types/react": "^17.0.2",
+    "@types/react-hyperscript": "^3.0.5",
+    "@types/react-redux": "^7.1.16",
+    "@types/rebass": "^4.0.8",
+    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "argparse": "^2.0.1",
