--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "markdown-it": "^8.4.2",
     "markdown-it-attrs": "^3.0.1",
     "org-async-actions": "^1.1.0",
-    "org-shell": "^6.0.0",
+    "org-shell": "^7.0.0-2",
     "punycode": "^2.1.1",
     "ramda": "^0.26.1",
     "react": "^16.8.2",
