--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "markdown-it": "^8.4.2",
     "markdown-it-attrs": "^3.0.1",
     "org-async-actions": "^1.1.0",
-    "org-shell": "^7.0.0-2",
+    "org-shell": "^7.0.0-3",
     "punycode": "^2.1.1",
     "ramda": "^0.26.1",
     "react": "^16.8.2",
@@ -42,6 +42,8 @@
     "@types/node": "^14.14.28",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.2",
+    "@types/react-aria-menubutton": "^6.2.7",
+    "@types/react-dom": "^17.0.2",
     "@types/react-hyperscript": "^3.0.5",
     "@types/react-redux": "^7.1.16",
     "@types/rebass": "^4.0.8",
