--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "7.4.1",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@types/file-saver": "^2.0.1",
     "@types/is-url": "^1.2.28",
     "@types/markdown-it": "^12.0.1",
