--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "debounce": "^1.2.0",
     "eslint": "^7.20.0",
     "file-saver": "^2.0.1",
+    "fp-ts": "^2.9.5",
+    "io-ts": "^2.2.16",
+    "io-ts-promise": "^2.0.2",
+    "io-ts-types": "^0.5.16",
     "is-url": "^1.2.4",
     "markdown-it": "^8.4.2",
     "markdown-it-attrs": "^3.0.1",
     "org-async-actions": "^1.1.0",
     "org-shell": "^7.0.0-3",
+    "monocle-ts": "^2.3.9",
+    "newtype-ts": "^0.3.4",
     "punycode": "^2.1.1",
     "ramda": "^0.26.1",
     "react": "^16.8.2",
