--- a/package.json
+++ b/package.json
@@ -13,19 +13,17 @@
     "buffer": "^6.0.3",
     "d3": "^5.5.0",
     "debounce": "^1.2.0",
-    "eslint": "^7.20.0",
     "file-saver": "^2.0.1",
     "fp-ts": "^2.9.5",
     "io-ts": "^2.2.16",
     "io-ts-promise": "^2.0.2",
     "io-ts-types": "^0.5.16",
     "is-url": "^1.2.4",
-    "markdown-it": "^8.4.2",
+    "markdown-it": "^9.0.0",
     "markdown-it-attrs": "^3.0.1",
-    "org-async-actions": "^1.1.0",
-    "org-shell": "^7.0.0-3",
     "monocle-ts": "^2.3.9",
     "newtype-ts": "^0.3.4",
+    "org-shell": "^7.0.0-5",
     "punycode": "^2.1.1",
     "ramda": "^0.26.1",
     "react": "^16.8.2",
@@ -55,10 +53,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/rebass": "^4.0.8",
     "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
     "argparse": "^2.0.1",
-    "esbuild": "^0.8.46",
-    "typescript": "^4.1.5"
+    "esbuild": "^0.8.46"
   }
 }
