Enable downlevel iteration in tsconfig.json and change target to es6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,17 @@
       "es2016",
       "dom"
     ],
+
+    "target": "ES6",
+
     "module": "commonjs",
     "allowJs": true,
     "checkJs": true,
     "noEmit": true,
 
     "strict": true,
+
+    "downlevelIteration": true,
 
     "moduleResolution": "node",
     "resolveJsonModule": true,
