--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-hyperscript": "^3.0.5",
     "@types/react-redux": "^7.1.16",
+    "@types/react-window": "^1.8.2",
     "@types/rebass": "^4.0.8",
     "@types/styled-components": "^5.1.7",
     "@types/throttleit": "^1.0.0",
