--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
+    "@types/debounce": "^1.2.0",
     "@types/node": "^14.14.28",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.2",
