--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*.ts"]
 }
