--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "monocle-ts": "^2.3.9",
     "newtype-ts": "^0.3.4",
     "org-shell": "^7.0.0-5",
+    "pako": "^2.0.3",
     "punycode": "^2.1.1",
     "ramda": "^0.26.1",
     "react": "^16.8.2",
@@ -47,6 +48,7 @@
     "@types/d3": "^6.3.0",
     "@types/debounce": "^1.2.0",
     "@types/node": "^14.14.28",
+    "@types/pako": "^1.0.1",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.2",
     "@types/react-aria-menubutton": "^6.2.7",
