--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,8 @@
     "rules": {
       "no-unused-vars": "off",
       "@typescript-eslint/no-unused-vars": "error"
+      "no-redeclare": "off",
+      "@typescript-eslint/no-redeclare": "error"
     }
   }]
 }
