--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,7 @@
     ],
     "rules": {
       "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": "error"
+      "@typescript-eslint/no-unused-vars": "error",
       "no-redeclare": "off",
       "@typescript-eslint/no-redeclare": "error"
     }
