--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
       "@typescript-eslint"
     ],
     "rules": {
+      "no-undef": "off",
       "no-unused-vars": "off",
       "@typescript-eslint/no-unused-vars": "error",
       "no-redeclare": "off",
