--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "@types/density-clustering": "^1.3.0",
     "@types/file-saver": "^2.0.1",
     "@types/is-url": "^1.2.28",
     "@types/markdown-it": "^12.0.1",
@@ -13,6 +14,7 @@
     "buffer": "^6.0.3",
     "d3": "^6.6.2",
     "debounce": "^1.2.0",
+    "density-clustering": "^1.3.0",
     "file-saver": "^2.0.1",
     "fp-ts": "^2.9.5",
     "immer": "^8.0.4",
