--- a/.eslintrc
+++ b/.eslintrc
@@ -9,11 +9,13 @@
     "node": true,
     "browser": true
   },
+  "plugins": [ "eslint-plugin-react-createelement" ],
   "rules": {
     "comma-dangle": [2, {
       "arrays": "always-multiline",
       "objects": "always-multiline",
     }],
+    "react-createelement/createelement-arguments": 2,
     "curly": [2, "multi-line"],
     "new-cap": 0,
     "no-mixed-requires": 0,
@@ -30,9 +32,7 @@
   "overrides": [{
     "files": ["*.ts"],
     "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "@typescript-eslint"
-    ],
+    "plugins": [ "@typescript-eslint" ],
     "rules": {
       "no-undef": "off",
       "no-unused-vars": "off",
