--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "argparse": "^2.0.1",
     "esbuild": "^0.13.4",
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "eslint-plugin-react-createelement": "file:eslint-plugin-react-createelement"
   }
 }
