--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3": "^6.6.2",
     "debounce": "^1.2.0",
     "density-clustering": "^1.3.0",
+    "fflate": "^0.7.1",
     "file-saver": "^2.0.1",
     "fp-ts": "^2.9.5",
     "immer": "^9.0.6",
@@ -23,7 +24,6 @@
     "monocle-ts": "^2.3.9",
     "newtype-ts": "^0.3.4",
     "org-shell": "^7.0.0-8",
-    "pako": "^2.0.3",
     "punycode": "^2.1.1",
     "ramda": "^0.26.1",
     "react": "^17.0.2",
