--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "io-ts-promise": "^2.0.2",
     "io-ts-types": "^0.5.16",
     "is-url": "^1.2.4",
+    "lru-cache": "^6.0.0",
     "markdown-it": "^9.0.0",
     "markdown-it-attrs": "^3.0.1",
     "monocle-ts": "^2.3.9",
@@ -44,6 +45,7 @@
     "@types/density-clustering": "^1.3.0",
     "@types/file-saver": "^2.0.1",
     "@types/is-url": "^1.2.28",
+    "@types/lru-cache": "^5.1.1",
     "@types/markdown-it": "^12.0.1",
     "@types/node": "^14.14.28",
     "@types/pako": "^1.0.1",
